.on-deck/apps/media/qbittorrent/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
    - name: torrent-tcp
      port: 6881
      protocol: TCP
    - name: torrent-udp
      port: 6881
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Torrent Client
    gethomepage.dev/group: Media
    gethomepage.dev/icon: qbittorrent.png
    gethomepage.dev/name: qbittorrent
    gethomepage.dev/widget.type: "qbittorrent"
    gethomepage.dev/widget.url: "https://qbittorrent.wakkalabs.com"
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - qbittorrent.wakkalabs.com
      secretName: qbittorrent-tls
  rules:
    - host: qbittorrent.wakkalabs.com
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
            path: /
            pathType: Prefix
